tests/paczka1/fuzzy1/87387235.err
Error in line 1: SU8 SU8 U8,7
Error in line 2: S68 S68 331,1
Error in line 7: CSH S68 24,4
Error in line 3: ualb S543 76,8
Error in line 9: ualb S68 40,0
Error in line 12: S68 S264 43,9
Error in line 14: S68 S68 73,8
Error in line 16: ualb S543 88,0
Error in line 25: CSH A995 -1,9
Error in line 23: waAnk S264 149,4
Error in line 28: waAnk S68 35,0
Error in line 32: ualb S68 50,1
Error in line 33: GSwxJo S68 95,0
